--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,5 @@
 @import "flatpickr/dist/flatpickr.min.css";
-/*
-@import './../../vendor/power-components/livewire-powergrid/dist/tailwind.css'
-*/
+/*@import './../../vendor/power-components/livewire-powergrid/dist/tailwind.css';*/
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
